PLC_Trabalhos/TP2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    DEFINIR
    DOISPONTOS
    FAZ
    RETORNAR

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Declaracoes Corpo
Rule 2     Programa -> Corpo
Rule 3     Corpo -> Processo
Rule 4     Corpo -> Corpo Processo
Rule 5     Declaracoes -> Declaracao
Rule 6     Declaracoes -> Declaracoes Declaracao
Rule 7     Declaracao -> INTEIRO Variaveis
Rule 8     Variaveis -> Variavel
Rule 9     Variaveis -> Variaveis VIRGULA Variavel
Rule 10    Variavel -> ID
Rule 11    Variavel -> ID ABREPARENTESESRET NUMERO FECHAPARENTESESRET
Rule 12    Variavel -> ID ABREPARENTESESRET NUMERO FECHAPARENTESESRET ABREPARENTESESRET NUMERO FECHAPARENTESESRET
Rule 13    Processo -> Processo_Imprimir
Rule 14    Processo -> Processo_Entrada
Rule 15    Processo -> Processo_Se
Rule 16    Processo -> Processo_Enquanto
Rule 17    Processo -> Incremento
Rule 18    Processo -> Decremento
Rule 19    Processo -> Expressao
Rule 20    Processo -> Atribuicao
Rule 21    Processo_Se -> SE ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS
Rule 22    Processo_Se -> SE ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS SENAO ABRECHAVETAS Corpo FECHACHAVETAS
Rule 23    Processo_Enquanto -> ENQUANTO ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS
Rule 24    Atribuicao -> ID IGUAL Expressao
Rule 25    Atribuicao -> ID ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
Rule 26    Atribuicao -> ID ABREPARENTESESRET Fator FECHAPARENTESESRET ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
Rule 27    Processo_Imprimir -> IMPRIMIR ABREPARENTESES Expressao FECHAPARENTESES
Rule 28    Processo_Imprimir -> IMPRIMIR ABREPARENTESES CITACAO FECHAPARENTESES
Rule 29    Processo_Entrada -> ENTRADA ABREPARENTESES Variavel FECHAPARENTESES
Rule 30    Incremento -> ID INCREMENTO
Rule 31    Decremento -> ID DECREMENTO
Rule 32    Expressao -> Termo
Rule 33    Expressao -> Expressao ADICAO Termo
Rule 34    Expressao -> Expressao SUBTRACAO Termo
Rule 35    Expressao -> Expressao EQUIVALENTE Expressao
Rule 36    Expressao -> Expressao MAIOR Expressao
Rule 37    Expressao -> Expressao MENOR Expressao
Rule 38    Expressao -> Expressao MAIORIGUAL Expressao
Rule 39    Expressao -> Expressao MENORIGUAL Expressao
Rule 40    Expressao -> Expressao E Expressao
Rule 41    Expressao -> Expressao OU Expressao
Rule 42    Expressao -> NAO Expressao
Rule 43    Termo -> Fator
Rule 44    Termo -> Termo MULTIPLICACAO Fator
Rule 45    Termo -> Termo DIVISAO Fator
Rule 46    Termo -> Termo RESTO Fator
Rule 47    Fator -> ID
Rule 48    Fator -> NUMERO
Rule 49    Fator -> ID ABREPARENTESESRET Expressao FECHAPARENTESESRET
Rule 50    Fator -> ID ABREPARENTESESRET Expressao FECHAPARENTESESRET ABREPARENTESESRET Expressao FECHAPARENTESESRET

Terminals, with rules where they appear

ABRECHAVETAS         : 21 22 22 23
ABREPARENTESES       : 21 22 23 27 28 29
ABREPARENTESESRET    : 11 12 12 25 26 26 49 50 50
ADICAO               : 33
ARRAY                : 
CITACAO              : 28
DECREMENTO           : 31
DEFINIR              : 
DIVISAO              : 45
DOISPONTOS           : 
E                    : 40
ENQUANTO             : 23
ENTRADA              : 29
EQUIVALENTE          : 35
FAZ                  : 
FECHACHAVETAS        : 21 22 22 23
FECHAPARENTESES      : 21 22 23 27 28 29
FECHAPARENTESESRET   : 11 12 12 25 26 26 49 50 50
ID                   : 10 11 12 24 25 26 30 31 47 49 50
IGUAL                : 24 25 26
IMPRIMIR             : 27 28
INCREMENTO           : 30
INTEIRO              : 7
MAIOR                : 36
MAIORIGUAL           : 38
MENOR                : 37
MENORIGUAL           : 39
MULTIPLICACAO        : 44
NAO                  : 42
NUMERO               : 11 12 12 48
OU                   : 41
RESTO                : 46
RETORNAR             : 
SE                   : 21 22
SENAO                : 22
SUBTRACAO            : 34
VIRGULA              : 9
error                : 

Nonterminals, with rules where they appear

Atribuicao           : 20
Corpo                : 1 2 4 21 22 22 23
Declaracao           : 5 6
Declaracoes          : 1 6
Decremento           : 18
Expressao            : 19 21 22 23 24 25 26 27 33 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 49 50 50
Fator                : 25 26 26 43 44 45 46
Incremento           : 17
Processo             : 3 4
Processo_Enquanto    : 16
Processo_Entrada     : 14
Processo_Imprimir    : 13
Processo_Se          : 15
Programa             : 0
Termo                : 32 33 34 44 45 46
Variaveis            : 7 9
Variavel             : 8 9 29

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Declaracoes Corpo
    (2) Programa -> . Corpo
    (5) Declaracoes -> . Declaracao
    (6) Declaracoes -> . Declaracoes Declaracao
    (3) Corpo -> . Processo
    (4) Corpo -> . Corpo Processo
    (7) Declaracao -> . INTEIRO Variaveis
    (13) Processo -> . Processo_Imprimir
    (14) Processo -> . Processo_Entrada
    (15) Processo -> . Processo_Se
    (16) Processo -> . Processo_Enquanto
    (17) Processo -> . Incremento
    (18) Processo -> . Decremento
    (19) Processo -> . Expressao
    (20) Processo -> . Atribuicao
    (27) Processo_Imprimir -> . IMPRIMIR ABREPARENTESES Expressao FECHAPARENTESES
    (28) Processo_Imprimir -> . IMPRIMIR ABREPARENTESES CITACAO FECHAPARENTESES
    (29) Processo_Entrada -> . ENTRADA ABREPARENTESES Variavel FECHAPARENTESES
    (21) Processo_Se -> . SE ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS
    (22) Processo_Se -> . SE ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS SENAO ABRECHAVETAS Corpo FECHACHAVETAS
    (23) Processo_Enquanto -> . ENQUANTO ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS
    (30) Incremento -> . ID INCREMENTO
    (31) Decremento -> . ID DECREMENTO
    (32) Expressao -> . Termo
    (33) Expressao -> . Expressao ADICAO Termo
    (34) Expressao -> . Expressao SUBTRACAO Termo
    (35) Expressao -> . Expressao EQUIVALENTE Expressao
    (36) Expressao -> . Expressao MAIOR Expressao
    (37) Expressao -> . Expressao MENOR Expressao
    (38) Expressao -> . Expressao MAIORIGUAL Expressao
    (39) Expressao -> . Expressao MENORIGUAL Expressao
    (40) Expressao -> . Expressao E Expressao
    (41) Expressao -> . Expressao OU Expressao
    (42) Expressao -> . NAO Expressao
    (24) Atribuicao -> . ID IGUAL Expressao
    (25) Atribuicao -> . ID ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
    (26) Atribuicao -> . ID ABREPARENTESESRET Fator FECHAPARENTESESRET ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
    (43) Termo -> . Fator
    (44) Termo -> . Termo MULTIPLICACAO Fator
    (45) Termo -> . Termo DIVISAO Fator
    (46) Termo -> . Termo RESTO Fator
    (47) Fator -> . ID
    (48) Fator -> . NUMERO
    (49) Fator -> . ID ABREPARENTESESRET Expressao FECHAPARENTESESRET
    (50) Fator -> . ID ABREPARENTESESRET Expressao FECHAPARENTESESRET ABREPARENTESESRET Expressao FECHAPARENTESESRET

    INTEIRO         shift and go to state 6
    IMPRIMIR        shift and go to state 15
    ENTRADA         shift and go to state 16
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 18
    ID              shift and go to state 19
    NAO             shift and go to state 21
    NUMERO          shift and go to state 23

    Programa                       shift and go to state 1
    Declaracoes                    shift and go to state 2
    Corpo                          shift and go to state 3
    Declaracao                     shift and go to state 4
    Processo                       shift and go to state 5
    Processo_Imprimir              shift and go to state 7
    Processo_Entrada               shift and go to state 8
    Processo_Se                    shift and go to state 9
    Processo_Enquanto              shift and go to state 10
    Incremento                     shift and go to state 11
    Decremento                     shift and go to state 12
    Expressao                      shift and go to state 13
    Atribuicao                     shift and go to state 14
    Termo                          shift and go to state 20
    Fator                          shift and go to state 22

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Declaracoes . Corpo
    (6) Declaracoes -> Declaracoes . Declaracao
    (3) Corpo -> . Processo
    (4) Corpo -> . Corpo Processo
    (7) Declaracao -> . INTEIRO Variaveis
    (13) Processo -> . Processo_Imprimir
    (14) Processo -> . Processo_Entrada
    (15) Processo -> . Processo_Se
    (16) Processo -> . Processo_Enquanto
    (17) Processo -> . Incremento
    (18) Processo -> . Decremento
    (19) Processo -> . Expressao
    (20) Processo -> . Atribuicao
    (27) Processo_Imprimir -> . IMPRIMIR ABREPARENTESES Expressao FECHAPARENTESES
    (28) Processo_Imprimir -> . IMPRIMIR ABREPARENTESES CITACAO FECHAPARENTESES
    (29) Processo_Entrada -> . ENTRADA ABREPARENTESES Variavel FECHAPARENTESES
    (21) Processo_Se -> . SE ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS
    (22) Processo_Se -> . SE ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS SENAO ABRECHAVETAS Corpo FECHACHAVETAS
    (23) Processo_Enquanto -> . ENQUANTO ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS
    (30) Incremento -> . ID INCREMENTO
    (31) Decremento -> . ID DECREMENTO
    (32) Expressao -> . Termo
    (33) Expressao -> . Expressao ADICAO Termo
    (34) Expressao -> . Expressao SUBTRACAO Termo
    (35) Expressao -> . Expressao EQUIVALENTE Expressao
    (36) Expressao -> . Expressao MAIOR Expressao
    (37) Expressao -> . Expressao MENOR Expressao
    (38) Expressao -> . Expressao MAIORIGUAL Expressao
    (39) Expressao -> . Expressao MENORIGUAL Expressao
    (40) Expressao -> . Expressao E Expressao
    (41) Expressao -> . Expressao OU Expressao
    (42) Expressao -> . NAO Expressao
    (24) Atribuicao -> . ID IGUAL Expressao
    (25) Atribuicao -> . ID ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
    (26) Atribuicao -> . ID ABREPARENTESESRET Fator FECHAPARENTESESRET ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
    (43) Termo -> . Fator
    (44) Termo -> . Termo MULTIPLICACAO Fator
    (45) Termo -> . Termo DIVISAO Fator
    (46) Termo -> . Termo RESTO Fator
    (47) Fator -> . ID
    (48) Fator -> . NUMERO
    (49) Fator -> . ID ABREPARENTESESRET Expressao FECHAPARENTESESRET
    (50) Fator -> . ID ABREPARENTESESRET Expressao FECHAPARENTESESRET ABREPARENTESESRET Expressao FECHAPARENTESESRET

    INTEIRO         shift and go to state 6
    IMPRIMIR        shift and go to state 15
    ENTRADA         shift and go to state 16
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 18
    ID              shift and go to state 19
    NAO             shift and go to state 21
    NUMERO          shift and go to state 23

    Corpo                          shift and go to state 24
    Declaracao                     shift and go to state 25
    Processo                       shift and go to state 5
    Processo_Imprimir              shift and go to state 7
    Processo_Entrada               shift and go to state 8
    Processo_Se                    shift and go to state 9
    Processo_Enquanto              shift and go to state 10
    Incremento                     shift and go to state 11
    Decremento                     shift and go to state 12
    Expressao                      shift and go to state 13
    Atribuicao                     shift and go to state 14
    Termo                          shift and go to state 20
    Fator                          shift and go to state 22

state 3

    (2) Programa -> Corpo .
    (4) Corpo -> Corpo . Processo
    (13) Processo -> . Processo_Imprimir
    (14) Processo -> . Processo_Entrada
    (15) Processo -> . Processo_Se
    (16) Processo -> . Processo_Enquanto
    (17) Processo -> . Incremento
    (18) Processo -> . Decremento
    (19) Processo -> . Expressao
    (20) Processo -> . Atribuicao
    (27) Processo_Imprimir -> . IMPRIMIR ABREPARENTESES Expressao FECHAPARENTESES
    (28) Processo_Imprimir -> . IMPRIMIR ABREPARENTESES CITACAO FECHAPARENTESES
    (29) Processo_Entrada -> . ENTRADA ABREPARENTESES Variavel FECHAPARENTESES
    (21) Processo_Se -> . SE ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS
    (22) Processo_Se -> . SE ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS SENAO ABRECHAVETAS Corpo FECHACHAVETAS
    (23) Processo_Enquanto -> . ENQUANTO ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS
    (30) Incremento -> . ID INCREMENTO
    (31) Decremento -> . ID DECREMENTO
    (32) Expressao -> . Termo
    (33) Expressao -> . Expressao ADICAO Termo
    (34) Expressao -> . Expressao SUBTRACAO Termo
    (35) Expressao -> . Expressao EQUIVALENTE Expressao
    (36) Expressao -> . Expressao MAIOR Expressao
    (37) Expressao -> . Expressao MENOR Expressao
    (38) Expressao -> . Expressao MAIORIGUAL Expressao
    (39) Expressao -> . Expressao MENORIGUAL Expressao
    (40) Expressao -> . Expressao E Expressao
    (41) Expressao -> . Expressao OU Expressao
    (42) Expressao -> . NAO Expressao
    (24) Atribuicao -> . ID IGUAL Expressao
    (25) Atribuicao -> . ID ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
    (26) Atribuicao -> . ID ABREPARENTESESRET Fator FECHAPARENTESESRET ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
    (43) Termo -> . Fator
    (44) Termo -> . Termo MULTIPLICACAO Fator
    (45) Termo -> . Termo DIVISAO Fator
    (46) Termo -> . Termo RESTO Fator
    (47) Fator -> . ID
    (48) Fator -> . NUMERO
    (49) Fator -> . ID ABREPARENTESESRET Expressao FECHAPARENTESESRET
    (50) Fator -> . ID ABREPARENTESESRET Expressao FECHAPARENTESESRET ABREPARENTESESRET Expressao FECHAPARENTESESRET

    $end            reduce using rule 2 (Programa -> Corpo .)
    IMPRIMIR        shift and go to state 15
    ENTRADA         shift and go to state 16
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 18
    ID              shift and go to state 19
    NAO             shift and go to state 21
    NUMERO          shift and go to state 23

    Processo                       shift and go to state 26
    Processo_Imprimir              shift and go to state 7
    Processo_Entrada               shift and go to state 8
    Processo_Se                    shift and go to state 9
    Processo_Enquanto              shift and go to state 10
    Incremento                     shift and go to state 11
    Decremento                     shift and go to state 12
    Expressao                      shift and go to state 13
    Atribuicao                     shift and go to state 14
    Termo                          shift and go to state 20
    Fator                          shift and go to state 22

state 4

    (5) Declaracoes -> Declaracao .

    INTEIRO         reduce using rule 5 (Declaracoes -> Declaracao .)
    IMPRIMIR        reduce using rule 5 (Declaracoes -> Declaracao .)
    ENTRADA         reduce using rule 5 (Declaracoes -> Declaracao .)
    SE              reduce using rule 5 (Declaracoes -> Declaracao .)
    ENQUANTO        reduce using rule 5 (Declaracoes -> Declaracao .)
    ID              reduce using rule 5 (Declaracoes -> Declaracao .)
    NAO             reduce using rule 5 (Declaracoes -> Declaracao .)
    NUMERO          reduce using rule 5 (Declaracoes -> Declaracao .)


state 5

    (3) Corpo -> Processo .

    IMPRIMIR        reduce using rule 3 (Corpo -> Processo .)
    ENTRADA         reduce using rule 3 (Corpo -> Processo .)
    SE              reduce using rule 3 (Corpo -> Processo .)
    ENQUANTO        reduce using rule 3 (Corpo -> Processo .)
    ID              reduce using rule 3 (Corpo -> Processo .)
    NAO             reduce using rule 3 (Corpo -> Processo .)
    NUMERO          reduce using rule 3 (Corpo -> Processo .)
    $end            reduce using rule 3 (Corpo -> Processo .)
    FECHACHAVETAS   reduce using rule 3 (Corpo -> Processo .)


state 6

    (7) Declaracao -> INTEIRO . Variaveis
    (8) Variaveis -> . Variavel
    (9) Variaveis -> . Variaveis VIRGULA Variavel
    (10) Variavel -> . ID
    (11) Variavel -> . ID ABREPARENTESESRET NUMERO FECHAPARENTESESRET
    (12) Variavel -> . ID ABREPARENTESESRET NUMERO FECHAPARENTESESRET ABREPARENTESESRET NUMERO FECHAPARENTESESRET

    ID              shift and go to state 29

    Variaveis                      shift and go to state 27
    Variavel                       shift and go to state 28

state 7

    (13) Processo -> Processo_Imprimir .

    IMPRIMIR        reduce using rule 13 (Processo -> Processo_Imprimir .)
    ENTRADA         reduce using rule 13 (Processo -> Processo_Imprimir .)
    SE              reduce using rule 13 (Processo -> Processo_Imprimir .)
    ENQUANTO        reduce using rule 13 (Processo -> Processo_Imprimir .)
    ID              reduce using rule 13 (Processo -> Processo_Imprimir .)
    NAO             reduce using rule 13 (Processo -> Processo_Imprimir .)
    NUMERO          reduce using rule 13 (Processo -> Processo_Imprimir .)
    $end            reduce using rule 13 (Processo -> Processo_Imprimir .)
    FECHACHAVETAS   reduce using rule 13 (Processo -> Processo_Imprimir .)


state 8

    (14) Processo -> Processo_Entrada .

    IMPRIMIR        reduce using rule 14 (Processo -> Processo_Entrada .)
    ENTRADA         reduce using rule 14 (Processo -> Processo_Entrada .)
    SE              reduce using rule 14 (Processo -> Processo_Entrada .)
    ENQUANTO        reduce using rule 14 (Processo -> Processo_Entrada .)
    ID              reduce using rule 14 (Processo -> Processo_Entrada .)
    NAO             reduce using rule 14 (Processo -> Processo_Entrada .)
    NUMERO          reduce using rule 14 (Processo -> Processo_Entrada .)
    $end            reduce using rule 14 (Processo -> Processo_Entrada .)
    FECHACHAVETAS   reduce using rule 14 (Processo -> Processo_Entrada .)


state 9

    (15) Processo -> Processo_Se .

    IMPRIMIR        reduce using rule 15 (Processo -> Processo_Se .)
    ENTRADA         reduce using rule 15 (Processo -> Processo_Se .)
    SE              reduce using rule 15 (Processo -> Processo_Se .)
    ENQUANTO        reduce using rule 15 (Processo -> Processo_Se .)
    ID              reduce using rule 15 (Processo -> Processo_Se .)
    NAO             reduce using rule 15 (Processo -> Processo_Se .)
    NUMERO          reduce using rule 15 (Processo -> Processo_Se .)
    $end            reduce using rule 15 (Processo -> Processo_Se .)
    FECHACHAVETAS   reduce using rule 15 (Processo -> Processo_Se .)


state 10

    (16) Processo -> Processo_Enquanto .

    IMPRIMIR        reduce using rule 16 (Processo -> Processo_Enquanto .)
    ENTRADA         reduce using rule 16 (Processo -> Processo_Enquanto .)
    SE              reduce using rule 16 (Processo -> Processo_Enquanto .)
    ENQUANTO        reduce using rule 16 (Processo -> Processo_Enquanto .)
    ID              reduce using rule 16 (Processo -> Processo_Enquanto .)
    NAO             reduce using rule 16 (Processo -> Processo_Enquanto .)
    NUMERO          reduce using rule 16 (Processo -> Processo_Enquanto .)
    $end            reduce using rule 16 (Processo -> Processo_Enquanto .)
    FECHACHAVETAS   reduce using rule 16 (Processo -> Processo_Enquanto .)


state 11

    (17) Processo -> Incremento .

    IMPRIMIR        reduce using rule 17 (Processo -> Incremento .)
    ENTRADA         reduce using rule 17 (Processo -> Incremento .)
    SE              reduce using rule 17 (Processo -> Incremento .)
    ENQUANTO        reduce using rule 17 (Processo -> Incremento .)
    ID              reduce using rule 17 (Processo -> Incremento .)
    NAO             reduce using rule 17 (Processo -> Incremento .)
    NUMERO          reduce using rule 17 (Processo -> Incremento .)
    $end            reduce using rule 17 (Processo -> Incremento .)
    FECHACHAVETAS   reduce using rule 17 (Processo -> Incremento .)


state 12

    (18) Processo -> Decremento .

    IMPRIMIR        reduce using rule 18 (Processo -> Decremento .)
    ENTRADA         reduce using rule 18 (Processo -> Decremento .)
    SE              reduce using rule 18 (Processo -> Decremento .)
    ENQUANTO        reduce using rule 18 (Processo -> Decremento .)
    ID              reduce using rule 18 (Processo -> Decremento .)
    NAO             reduce using rule 18 (Processo -> Decremento .)
    NUMERO          reduce using rule 18 (Processo -> Decremento .)
    $end            reduce using rule 18 (Processo -> Decremento .)
    FECHACHAVETAS   reduce using rule 18 (Processo -> Decremento .)


state 13

    (19) Processo -> Expressao .
    (33) Expressao -> Expressao . ADICAO Termo
    (34) Expressao -> Expressao . SUBTRACAO Termo
    (35) Expressao -> Expressao . EQUIVALENTE Expressao
    (36) Expressao -> Expressao . MAIOR Expressao
    (37) Expressao -> Expressao . MENOR Expressao
    (38) Expressao -> Expressao . MAIORIGUAL Expressao
    (39) Expressao -> Expressao . MENORIGUAL Expressao
    (40) Expressao -> Expressao . E Expressao
    (41) Expressao -> Expressao . OU Expressao

    IMPRIMIR        reduce using rule 19 (Processo -> Expressao .)
    ENTRADA         reduce using rule 19 (Processo -> Expressao .)
    SE              reduce using rule 19 (Processo -> Expressao .)
    ENQUANTO        reduce using rule 19 (Processo -> Expressao .)
    ID              reduce using rule 19 (Processo -> Expressao .)
    NAO             reduce using rule 19 (Processo -> Expressao .)
    NUMERO          reduce using rule 19 (Processo -> Expressao .)
    $end            reduce using rule 19 (Processo -> Expressao .)
    FECHACHAVETAS   reduce using rule 19 (Processo -> Expressao .)
    ADICAO          shift and go to state 30
    SUBTRACAO       shift and go to state 31
    EQUIVALENTE     shift and go to state 32
    MAIOR           shift and go to state 33
    MENOR           shift and go to state 34
    MAIORIGUAL      shift and go to state 35
    MENORIGUAL      shift and go to state 36
    E               shift and go to state 37
    OU              shift and go to state 38


state 14

    (20) Processo -> Atribuicao .

    IMPRIMIR        reduce using rule 20 (Processo -> Atribuicao .)
    ENTRADA         reduce using rule 20 (Processo -> Atribuicao .)
    SE              reduce using rule 20 (Processo -> Atribuicao .)
    ENQUANTO        reduce using rule 20 (Processo -> Atribuicao .)
    ID              reduce using rule 20 (Processo -> Atribuicao .)
    NAO             reduce using rule 20 (Processo -> Atribuicao .)
    NUMERO          reduce using rule 20 (Processo -> Atribuicao .)
    $end            reduce using rule 20 (Processo -> Atribuicao .)
    FECHACHAVETAS   reduce using rule 20 (Processo -> Atribuicao .)


state 15

    (27) Processo_Imprimir -> IMPRIMIR . ABREPARENTESES Expressao FECHAPARENTESES
    (28) Processo_Imprimir -> IMPRIMIR . ABREPARENTESES CITACAO FECHAPARENTESES

    ABREPARENTESES  shift and go to state 39


state 16

    (29) Processo_Entrada -> ENTRADA . ABREPARENTESES Variavel FECHAPARENTESES

    ABREPARENTESES  shift and go to state 40


state 17

    (21) Processo_Se -> SE . ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS
    (22) Processo_Se -> SE . ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS SENAO ABRECHAVETAS Corpo FECHACHAVETAS

    ABREPARENTESES  shift and go to state 41


state 18

    (23) Processo_Enquanto -> ENQUANTO . ABREPARENTESES Expressao FECHAPARENTESES ABRECHAVETAS Corpo FECHACHAVETAS

    ABREPARENTESES  shift and go to state 42


state 19

    (30) Incremento -> ID . INCREMENTO
    (31) Decremento -> ID . DECREMENTO
    (24) Atribuicao -> ID . IGUAL Expressao
    (25) Atribuicao -> ID . ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
    (26) Atribuicao -> ID . ABREPARENTESESRET Fator FECHAPARENTESESRET ABREPARENTESESRET Fator FECHAPARENTESESRET IGUAL Expressao
    (47) Fator -> ID .
    (49) Fator -> ID . ABREPARENTESESRET Expressao FECHAPARENTESESRET
    (50) Fator -> ID . ABREPARENTESESRET Expressao FECHAPARENTESESRET ABREPARENTESESRET Expressao FECHAPARENTESESRET

    INCREMENTO      shift and go to state 43
    DECREMENTO      shift and go to state 44
    IGUAL           shift and go to state 45
    ABREPARENTESESRET shift and go to state 46
    MULTIPLICACAO   reduce using rule 47 (Fator -> ID .)
    DIVISAO         reduce using rule 47 (Fator -> ID .)
    RESTO           reduce using rule 47 (Fator -> ID .)
    ADICAO          reduce using rule 47 (Fator -> ID .)
    SUBTRACAO       reduce using rule 47 (Fator -> ID .)
    EQUIVALENTE     reduce using rule 47 (Fator -> ID .)
    MAIOR           reduce using rule 47 (Fator -> ID .)
    MENOR           reduce using rule 47 (Fator -> ID .)
    MAIORIGUAL      reduce using rule 47 (Fator -> ID .)
    MENORIGUAL      reduce using rule 47 (Fator -> ID .)
    E               reduce using rule 47 (Fator -> ID .)
    OU              reduce using rule 47 (Fator -> ID .)
    IMPRIMIR        reduce using rule 47 (Fator -> ID .)
    ENTRADA         reduce using rule 47 (Fator -> ID .)
    SE              reduce using rule 47 (Fator -> ID .)
    ENQUANTO        reduce using rule 47 (Fator -> ID .)
    ID              reduce using rule 47 (Fator -> ID .)
    NAO             reduce using rule 47 (Fator -> ID .)
    NUMERO          reduce using rule 47 (Fator -> ID .)
    $end            reduce using rule 47 (Fator -> ID .)
    FECHACHAVETAS   reduce using rule 47 (Fator -> ID .)


state 20

    (32) Expressao -> Termo .
    (44) Termo -> Termo . MULTIPLICACAO Fator
    (45) Termo -> Termo . DIVISAO Fator
    (46) Termo -> Termo . RESTO Fator

    ADICAO          reduce using rule 32 (Expressao -> Termo .)
    SUBTRACAO       reduce using rule 32 (Expressao -> Termo .)
    EQUIVALENTE     reduce using rule 32 (Expressao -> Termo .)
    MAIOR           reduce using rule 32 (Expressao -> Termo .)
    MENOR           reduce using rule 32 (Expressao -> Termo .)
    MAIORIGUAL      reduce using rule 32 (Expressao -> Termo .)
    MENORIGUAL      reduce using rule 32 (Expressao -> Termo .)
    E               reduce using rule 32 (Expressao -> Termo .)
    OU              reduce using rule 32 (Expressao -> Termo .)
    IMPRIMIR        reduce using rule 32 (Expressao -> Termo .)
    ENTRADA         reduce using rule 32 (Expressao -> Termo .)
    SE              reduce using rule 32 (Expressao -> Termo .)
    ENQUANTO        reduce using rule 32 (Expressao -> Termo .)
    ID              reduce using rule 32 (Expressao -> Termo .)
    NAO             reduce using rule 32 (Expressao -> Termo .)
    NUMERO          reduce using rule 32 (Expressao -> Termo .)
    $end            reduce using rule 32 (Expressao -> Termo .)
    FECHAPARENTESES reduce using rule 32 (Expressao -> Termo .)
    FECHACHAVETAS   reduce using rule 32 (Expressao -> Termo .)
    FECHAPARENTESESRET reduce using rule 32 (Expressao -> Termo .)
    MULTIPLICACAO   shift and go to state 47
    DIVISAO         shift and go to state 48
    RESTO           shift and go to state 49


state 21

    (42) Expressao -> NAO . Expressao
    (32) Expressao -> . Termo
    (33) Expressao -> . Expressao ADICAO Termo
    (34) Expressao -> . Expressao SUBTRACAO Termo
    (35) Expressao -> . Expressao EQUIVALENTE Expressao
    (36) Expressao -> . Expressao MAIOR Expressao
    (37) Expressao -> . Expressao MENOR Expressao
    (38) Expressao -> . Expressao MAIORIGUAL Expressao
    (39) Expressao -> . Expressao MENORIGUAL Expressao
    (40) Expressao -> . Expressao E Expressao
    (41) Expressao -> . Expressao OU Expressao
    (42) Expressao -> . NAO Expressao
    (43) Termo -> . Fator
    (44) Termo -> . Termo MULTIPLICACAO Fator
    (45) Termo -> . Termo DIVISAO Fator
    (46) Termo -> . Termo RESTO Fator
    (47) Fator -> . ID
    (48) Fator -> . NUMERO
    (49) Fator -> . ID ABREPARENTESESRET Expressao FECHAPARENTESESRET
    (50) Fator -> . ID ABREPARENTESESRET Expressao FECHAPARENTESESRET ABREPARENTESESRET Expressao FECHAPARENTESESRET

    NAO             shift and go to state 21
    ID              shift and go to state 51
    NUMERO          shift and go to state 23

    Expressao                      shift and go to state 50
    Termo                          shift and go to state 20
    Fator                          shift and go to state 22

state 22

    (43) Termo -> Fator .

    MULTIPLICACAO   reduce using rule 43 (Termo -> Fator .)
    DIVISAO         reduce using rule 43 (Termo -> Fator .)
    RESTO           reduce using rule 43 (Termo -> Fator .)
    ADICAO          reduce using rule 43 (Termo -> Fator .)
    SUBTRACAO       reduce using rule 43 (Termo -> Fator .)
    EQUIVALENTE     reduce using rule 43 (Termo -> Fator .)
    MAIOR           reduce using rule 43 (Termo -> Fator .)
    MENOR           reduce using rule 43 (Termo -> Fator .)
    MAIORIGUAL      reduce using rule 43 (Termo -> Fator .)
    MENORIGUAL      reduce using rule 43 (Termo -> Fator .)
    E               reduce using rule 43 (Termo -> Fator .)
    OU              reduce using rule 43 (Termo -> Fator .)
    IMPRIMIR        reduce using rule 43 (Termo -> Fator .)
    ENTRADA         reduce using rule 43 (Termo -> Fator .)
    SE              reduce using rule 43 (Termo -> Fator .)
    ENQUANTO        reduce using rule 43 (Termo -> Fator .)
    ID              reduce using rule 43 (Termo -> Fator .)
    NAO             reduce using rule 43 (Termo -> Fator .)
    NUMERO          reduce using rule 43 (Termo -> Fator .)
    $end            reduce using rule 43 (Termo -> Fator .)
    FECHAPARENTESES reduce using rule 43 (Termo -> Fator .)
    FECHACHAVETAS   reduce using rule 43 (Termo -> Fator .)
    FECHAPARENTESESRET reduce using rule 43 (Termo -> Fator .)


state 23

    (48) Fator -> NUMERO .
